fix the height and overflow of body

--- a/src/assets/sass/modules/_general.sass
+++ b/src/assets/sass/modules/_general.sass
@@ -11,7 +11,6 @@ html
   overflow: hidden
 
 body
-  min-height: 100%
+  height: 100%
   overflow-y: auto
-  overflow-x: hidden
 
